--- a/guessme/index.html
+++ b/guessme/index.html
@@ -22,9 +22,16 @@
    		</div>
 
 	</div>
+  <div class="container">
+    <h4 class="text-center text-white mt-5 guess">Can You Guess The Name Of These Programming Terms?</h4>
+  
+
 
 	<section class="boxwrap">
 	<div class="container">
+
+    <!-- Game Box Or Canvas  -->
+
 		<div class="box">
 			<div class="start">
 				<button type="button" class="btn btn-success btn-lg startbtn">Start Now</button>
@@ -32,15 +39,21 @@
 			<div class="content">
 			<h1 class="boxheading"><b>WORD : </b><span class="word">Sample Text</span></h1>
 
-			<h3 class="text-center text-uppercase"><i class="fas fa-hand-point-down"></i>Type your Guess<i class="fas fa-hand-point-down"></i></h3>
+			<h3 class="text-center text-uppercase middle"><i class="fas fa-hand-point-down"></i>Type your Guess<i class="fas fa-hand-point-down"></i></h3>
 			<input class="form-control form-control-lg userinput" type="text" placeholder="Enter The Correct Word..">
 			<button type="button" class="btn btn-success submit">SUBMIT</button>
 			<h1 class="score">Score <span id="scoreupdate">00</span></h1>
+      <p class="text-center">Coded By Rohit Lohia</p>
 
 			</div>
 		</div>
+
+    <!-- Game Box Ends -->
 	</div>
 	</section>
+
+
+
 
 
 
