--- a/guessme/index.html
+++ b/guessme/index.html
@@ -41,7 +41,10 @@
 
 			<h3 class="text-center text-uppercase middle"><i class="fas fa-hand-point-down"></i>Type your Guess<i class="fas fa-hand-point-down"></i></h3>
 			<input class="form-control form-control-lg userinput" type="text" placeholder="Enter The Correct Word..">
+
+      <div class="btnwrap">
 			<button type="button" class="btn btn-success submit">SUBMIT</button>
+      </div>
 			<h1 class="score">Score <span id="scoreupdate">00</span></h1>
       <p class="text-center">Coded By Rohit Lohia</p>
 
